CHANGES IN FLTK 1.1.0

	- Added syntax highlighting example code to the editor
	  test program.
	- Fl_Text_Display didn't range check style buffer
	  values.
	- Added "dark" color constants (FL_DARK_RED, etc.)
	- The MacOS font code was missing definitions for
	  fl_font_ and fl_size_.


CHANGES IN FLTK 1.1.0rc3

	- Documentation updates.
	- New file chooser from design contest.
	- Did some testing with Valgrind and fixed some memory
	  problems in Fl_Help_View::Fl_HelpView,
	  Fl_Menu_::remove(), Fl_Text_Display::draw_vline(), and
	  resizeform() (convenience dialogs).
	- Fixed some redraw() bugs, and now redraw portions of
	  the parent widget when the label appears outside the
	  widget.
	- The boolean (char) value methods in Fl_Preferences
	  have been removed since some C++ compilers can't
	  handle char and int value methods with the same name.
	- Added fl_read_image() function.
	- Fixed Fl_Valuator::format() so that the correct format
	  type is used when step == 1.0.
	- Fl_Help_View didn't support the TT markup.
	- Fl_Shared_Image used a double-pointer to the image
	  handler functions, which was unnecessary and
	  unintuitive.
	- Fl_PNM_Image didn't load the height of the image
	  properly.
	- Fl_BMP_Image, Fl_JPEG_Image, Fl_PNG_Image, and
	  Fl_Shared_Image didn't delete image data that was
	  allocated.
	- Enabled the OpenGL and threads demos when compiling
	  for MingW.
	- Fl_File_Input didn't update the directory buttons if a
	  callback was registered with the widget.
	- The file chooser would return the last selected
	  file(s) when cancel was pressed.
	- The file chooser limited the resizing of the chooser
	  window unnecessarily.
	- Fixed WM_PAINT handling under WIN32.
	- Minor tweeks to MingW and OS/2 config headers.
	- Fl_Value_Input now correctly determines if step()
	  specifies an integer value.
	- Fl_Help_View didn't add links inside PRE elements.
	- OS/2 build fixes from Alexander Mai.
	- Now use strlcat() instead of strncat() which could